<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="25dp">

        <!-- Image -->

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:background="@color/imageGrayPlaceholder"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <!-- Name -->

           <!-- <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_tfvname_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tfvname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView"
                android:layout_marginLeft="5dp"
                app:layout_constraintEnd_toEndOf="parent"/>-->

            <!-- Botanical Name -->

            <TextView
                android:id="@+id/textView3"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_botname_label"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/botname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Other Names -->

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details_othname_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/botname" />

            <TextView
                android:id="@+id/othname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Description -->

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details_description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/othname" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Climate -->

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details_climate_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
                android:id="@+id/climate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!-- Health -->

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details_health_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/climate" />

            <TextView
                android:id="@+id/health"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Propagation -->

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details_propagation_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/health" />

            <TextView
                android:id="@+id/propagation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Uses -->

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details_uses_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/propagation" />

            <TextView
                android:id="@+id/uses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                android:layout_marginBottom="5dp"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Soil -->

            <TextView
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:textSize="14dp"
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/details_soil_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uses" />

            <TextView
                android:id="@+id/soil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Progress -->
            <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:visibility="visible">

                <ProgressBar
                    android:id="@+id/progress_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/progress_data"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/loading"
                    android:layout_marginTop="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>